# prototype

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  README_containerized.md  buf.gen.yaml  docker-compose.yaml  go.work  go.work.sum  messages.proto
broker/: .gitignore  README.md  configuration.go  constants.go  gencerts.sh  go.mod  go.sum  main.go  messages.proto  pprof.sh  protoc.sh
broker/client/: .gitignore  README.md  client.go
broker/metrics/: prometheus.go
broker/msgprpc/: codec.go
broker/provider/: asynctask.go  handlerfunc.go  messages.go  provider.go  rpcclient.go  store.go
broker/qhttp/: certificate.go  certreload.go  server.go
broker/scheduler/: benchmode.go  clienthandler.go  clientsocket.go  dispatcher.go  handler.go  queue.go  results.go  scheduler.go  scheduler_AnyFree.go  scheduler_RoundRobin.go  (+1 more)
client/: Makefile  README.md  client.go  client.sh  depickle.py  go.mod  go.sum  trynumpy.py
denoprovider/: .gitignore  README.md  crosscompile.ts  deno.json  main.ts
evaluation/: .gitignore  README.md  hetzner.md  serverledge.md
experiments/: README.md
metrics/: docker-compose.yaml  klimakongress_stats.csv  klimakongress_stats.ipynb  prometheus.yaml
proto/: go.mod
proto/v1/: anypack.go  (+3 more)
wasi-apps/: .gitignore
wasi-apps/travelling_salesman/: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  wrapper.sh
wasi-apps/travelling_salesman/src/: datasets.rs  main.rs
webprovider/: .gitignore  README.md  env.d.ts  index.html  package.json  protocol.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
(+668 files in other folders)
